namespaces/cloud-platform-live-0.k8s.integration.dsd.io/alan-myapp-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alan-myapp-dev
  labels:
    name: alan-myapp-dev
